<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="3dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/card_aqi_qlty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weather_quality"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="#ddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aqi"
                android:textAlignment="center"
                android:textColor="#000" />

            <TextView
                android:id="@+id/card_aqi_aqi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pm25"
                android:textAlignment="center"
                android:textColor="#000" />

            <TextView
                android:id="@+id/card_aqi_pm25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pm10"
                android:textAlignment="center"
                android:textColor="#000" />

            <TextView
                android:id="@+id/card_aqi_pm10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>